# djconsim_cpp

./: CMakeLists.txt  main.cpp
audio/: audio.cpp  audio.hpp  online_wave.hpp  reduction.hpp  sinwave.hpp  sound_object.hpp  source.cpp  source.hpp  time.hpp  wav.cpp  wav.hpp  white_noise.hpp
djcon/: machine.hpp  usb.hpp
test/: sample_serial.cpp  serial_clike.cpp  soundtest.cpp  test_serial.cpp
